--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,9 @@
      
         <nav class="menu">
         <div class="topbar-container">
-          <img src="https://heyko.fr/img/profile.png" style="margin-right: -100px" alt="heyko profile" width="50px">
+          <div id="profile_image">
+            <img src="https://heyko.fr/requests/get_user_avatar" alt="heyko profile" width="50px"></img>
+        </div>
 </div>
 
 
