--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,7 @@
 <link rel="shortcut icon" type="image/ico" href="img/logo-ico.ico">
 <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="%PUBLIC_URL%/style1.css">
-<link rel="stylesheet" href="%PUBLIC_URL%/style3.css">
+<link rel="stylesheet" href="%PUBLIC_URL%/style.css">
 <link rel="stylesheet" href="%PUBLIC_URL%/header.css">
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
