Test: disable page reloading for mobile when the user draws #3

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
 </head>
-  <bod id="body">
+  <body id="body">
     <div id="App">
       
     </div>
