bug resolution in the drawing application

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,12 @@
 
 </head>
   <body id="body">
-    <div id="App">
+    <div id="error_screen">
       
     </div>
+    <div id="App">
+      
+    </div> 
   </body>
 </html>
 
