It is now fully possible to link your discord account

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <div id="error_screen">
       
     </div>
+    <div id="message_screen">
+
+    </div>
     <div id="App">
       
     </div> 
