--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,9 @@
     <title>Heyko</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="Heyko est un studio de création de jeux vidéos, d'applications et de logiciels, le tout gratuit. Rencontrez une communauté active et chaleureuse sur heyko :D"></meta>
-<meta name="description" content="Heyko is a studio that creates video games, applications and software, all for free. Meet an active and friendly community on heyko :D"></meta>
+<meta name="description" content="Heyko is a studio that creates video games, applications and software, available on phones and computers."></meta>
 <meta http-equiv="Content-Language" content="en,fr"></meta>
-<meta name="keywords" content='télécharger jeux pc gratuit complet français windows 10,jeux gratuits pour pc,jeux gratuits ordinateur,jeux pc,heyko,Heyko,windows games free,for windows games free download,windows games best,jeux gratuits pour windows'></meta>
+<meta name="keywords" content='download free windows 10 pc games,free games for pc,free computer games,pc games,heyko,Heyko,windows games free,for windows games free download,windows games best,free games for windows, games for Linux, free games for Linux, free phone games, phone games, free games for Android, Android games'></meta>
 <meta content="Heyko" property="og:title"></meta>
 <meta content='%PUBLIC_URL%/img/logo-ico.ico' property='og:image'></meta>
 <meta charset="UTF-8"></meta>
