--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -1,3 +1,24 @@
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <title>Heyko - Privacy</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="Heyko is a studio that creates video games, applications and software, available on phones and computers."></meta>
+<meta http-equiv="Content-Language" content="en"></meta>
+<meta name="keywords" content='download free windows 10 pc games,free games for pc,free computer games,pc games,heyko,Heyko,windows games free,for windows games free download,windows games best,free games for windows, games for Linux, free games for Linux, free phone games, phone games, free games for Android, Android games'></meta>
+<meta content="Heyko" property="og:title"></meta>
+<meta content='/img/logo-ico.ico' property='og:image'></meta>
+<meta charset="UTF-8"></meta>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+
+<link rel="shortcut icon" type="image/ico" href="img/logo-ico.ico">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/style.css">
+
+</head>
+
 <style>
     [data-custom-class='body'], [data-custom-class='body'] * {
             background: transparent !important;
@@ -28,7 +49,7 @@
   font-family: Arial !important;
           }
   [data-custom-class='link'], [data-custom-class='link'] * {
-            color: #3030F1 !important;
+            color: #2ea0e8 !important;
   font-size: 14px !important;
   font-family: Arial !important;
   word-break: break-word !important;
