--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <meta charset="UTF-8"></meta>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 
-<link rel="shortcut icon" type="image/ico" href="img/logo-ico.ico">
+<link rel="shortcut icon" type="image/ico" href="/img/logo-ico.ico">
 <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="%PUBLIC_URL%/header.css">
